parser/tests/snapshots/functions__function_call.snap
---
source: parser/tests/functions.rs
expression: "format!(\"{:#?}\", program)"
---
Program {
    source_type: Script,
    body: [
        Statement(
            ExpressionStatement(
                ExpressionStatement {
                    node: Node {
                        start: 0,
                        end: 23,
                    },
                    expression: CallExpression(
                        CallExpression {
                            node: Node {
                                start: 0,
                                end: 23,
                            },
                            optional: false,
                            callee: Expression(
                                Identifier(
                                    Identifier {
                                        node: Node {
                                            start: 0,
                                            end: 7,
                                        },
                                        name: Atom('my_func' type=inline),
                                    },
                                ),
                            ),
                            arguments: [
                                Literal(
                                    Literal {
                                        node: Node {
                                            start: 8,
                                            end: 12,
                                        },
                                        value: Number(
                                            50.5,
                                        ),
                                    },
                                ),
                                Literal(
                                    Literal {
                                        node: Node {
                                            start: 14,
                                            end: 22,
                                        },
                                        value: String(
                                            "\"abc123\"",
                                        ),
                                    },
                                ),
                            ],
                        },
                    ),
                },
            ),
        ),
    ],
}
