parser/tests/snapshots/functions__function_declaration.snap
---
source: parser/tests/functions.rs
expression: "format!(\"{:#?}\", program)"
---
Program {
    source_type: Script,
    body: [
        Statement(
            Declaration(
                FunctionDeclaration(
                    FunctionDeclaration {
                        node: Node {
                            start: 0,
                            end: 52,
                        },
                        id: Identifier {
                            node: Node {
                                start: 9,
                                end: 12,
                            },
                            name: Atom('add' type=inline),
                        },
                        generator: false,
                        type_parameters: None,
                        params: [
                            Identifier(
                                Identifier {
                                    node: Node {
                                        start: 13,
                                        end: 15,
                                    },
                                    name: Atom('n1' type=inline),
                                },
                            ),
                            Identifier(
                                Identifier {
                                    node: Node {
                                        start: 17,
                                        end: 19,
                                    },
                                    name: Atom('n2' type=inline),
                                },
                            ),
                        ],
                        return_type: None,
                        body: FunctionBody {
                            node: Node {
                                start: 21,
                                end: 52,
                            },
                            body: [
                                Statement(
                                    ReturnStatement(
                                        ReturnStatement {
                                            node: Node {
                                                start: 31,
                                                end: 46,
                                            },
                                            argument: Some(
                                                BinaryExpression(
                                                    BinaryExpression {
                                                        node: Node {
                                                            start: 38,
                                                            end: 45,
                                                        },
                                                        operator: Plus,
                                                        left: Identifier(
                                                            Identifier {
                                                                node: Node {
                                                                    start: 38,
                                                                    end: 40,
                                                                },
                                                                name: Atom('n1' type=inline),
                                                            },
                                                        ),
                                                        right: Identifier(
                                                            Identifier {
                                                                node: Node {
                                                                    start: 43,
                                                                    end: 45,
                                                                },
                                                                name: Atom('n2' type=inline),
                                                            },
                                                        ),
                                                    },
                                                ),
                                            ),
                                        },
                                    ),
                                ),
                            ],
                        },
                    },
                ),
            ),
        ),
    ],
}
