parser/tests/snapshots/functions__function_expression.snap
---
source: parser/tests/functions.rs
expression: "format!(\"{:#?}\", program)"
---
Program {
    source_type: Script,
    body: [
        Statement(
            Declaration(
                VariableDeclaration(
                    VariableDeclaration {
                        node: Node {
                            start: 0,
                            end: 60,
                        },
                        declarations: [
                            VariableDeclarator {
                                node: Node {
                                    start: 6,
                                    end: 60,
                                },
                                id: Identifier(
                                    Identifier {
                                        node: Node {
                                            start: 6,
                                            end: 9,
                                        },
                                        name: Atom('sum' type=inline),
                                    },
                                ),
                                type_annotation: None,
                                init: Some(
                                    FunctionExpression(
                                        FunctionExpression {
                                            node: Node {
                                                start: 12,
                                                end: 60,
                                            },
                                            id: None,
                                            generator: false,
                                            params: [
                                                Identifier(
                                                    Identifier {
                                                        node: Node {
                                                            start: 21,
                                                            end: 23,
                                                        },
                                                        name: Atom('n1' type=inline),
                                                    },
                                                ),
                                                Identifier(
                                                    Identifier {
                                                        node: Node {
                                                            start: 25,
                                                            end: 27,
                                                        },
                                                        name: Atom('n2' type=inline),
                                                    },
                                                ),
                                            ],
                                            return_type: None,
                                            body: FunctionBody {
                                                node: Node {
                                                    start: 29,
                                                    end: 60,
                                                },
                                                body: [
                                                    Statement(
                                                        ReturnStatement(
                                                            ReturnStatement {
                                                                node: Node {
                                                                    start: 39,
                                                                    end: 54,
                                                                },
                                                                argument: Some(
                                                                    BinaryExpression(
                                                                        BinaryExpression {
                                                                            node: Node {
                                                                                start: 46,
                                                                                end: 53,
                                                                            },
                                                                            operator: Plus,
                                                                            left: Identifier(
                                                                                Identifier {
                                                                                    node: Node {
                                                                                        start: 46,
                                                                                        end: 48,
                                                                                    },
                                                                                    name: Atom('n1' type=inline),
                                                                                },
                                                                            ),
                                                                            right: Identifier(
                                                                                Identifier {
                                                                                    node: Node {
                                                                                        start: 51,
                                                                                        end: 53,
                                                                                    },
                                                                                    name: Atom('n2' type=inline),
                                                                                },
                                                                            ),
                                                                        },
                                                                    ),
                                                                ),
                                                            },
                                                        ),
                                                    ),
                                                ],
                                            },
                                        },
                                    ),
                                ),
                            },
                        ],
                        kind: Const,
                    },
                ),
            ),
        ),
    ],
}
